# twitter-bot

./: .env.example  AUDIT_REPORT.md  README.md  config.example.yaml  config.yaml  main.py  pyproject.toml  test_env.py
.github/workflows/: bot-schedule.yml
_bmad-output/analysis/: brainstorming-session-2026-01-11.md
_bmad-output/implementation-artifacts/: tech-spec-hybrid-reply-bot.md
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  maxime-profile.md  prd.md  product-brief-twitter-bot-2026-01-11.md
_bmad-output/planning-artifacts/research/: technical-viral-tweet-patterns-research-2026-01-11.md  viral-formula-twitter.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
assets/: account_analytics_content_2025-10-21_2026-01-18.csv  account_analytics_content_2025-10-24_2026-01-21.csv
src/twitter_bot/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/twitter_bot/browser/: __init__.py  reply_poster.py  stealth.py  watcher.py
src/twitter_bot/daemon/: __init__.py  scheduler.py
src/twitter_bot/generation/: __init__.py  fallback.py  gemini.py  generator.py  groq.py  openai.py  provider.py
src/twitter_bot/images/: __init__.py  code_screenshot.py  generator.py
src/twitter_bot/quote/: __init__.py  finder.py  generator.py
state/: state.json
tests/: conftest.py  test_config.py
tests/reply/: __init__.py  test_generator.py  test_scorer.py
tests/scoring/: test_scorer_similarity.py
tests/state/: test_manager_title.py
(+15 files in other folders)
